--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,19 @@ tqdm
 dlib
 face_recognition
 opencv-contrib-python
+-i https://pypi.org/simple
+aniso8601==4.1.0
+certifi==2018.11.29
+chardet==3.0.4
+click==7.0
+flask-restful==0.3.7
+flask==1.0.2
+idna==2.8
+itsdangerous==1.1.0
+jinja2==2.10
+markupsafe==1.1.0
+pytz==2018.9
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
+werkzeug==0.14.1
